<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/sortiraj"
        app:showAsAction="never"/>
    <item
        android:id="@+id/btnSortDateDesc"
        android:title="@string/datum_silazno"
        app:showAsAction="never"/>
    <item
        android:id="@+id/btnSortDateAsc"
        android:title="@string/datum_uzlazno"
        app:showAsAction="never"/>
    <item
        android:id="@+id/btnSortIznosDesc"
        android:title="@string/iznos_silazno"
        app:showAsAction="never"/>
    <item
        android:id="@+id/btnSortIznosAsc"
        android:title="@string/iznos_uzlazno"
        app:showAsAction="never"/>
    <item
        android:id="@+id/btnSortNazivDesc"
        android:title="@string/naziv_silazno"
        app:showAsAction="never"/>
    <item
        android:id="@+id/btnSortNazivAsc"
        android:title="@string/naziv_uzlazno"
        app:showAsAction="never"/>

</menu>